[gd_scene load_steps=4 format=3 uid="uid://bvtbynlob6rym"]

[ext_resource type="Script" uid="uid://baw6rfbl6dgoq" path="res://Deck/Card/card.gd" id="1_rcaje"]
[ext_resource type="Theme" uid="uid://bulxdobu4kdig" path="res://UI/main_theme.tres" id="2_by2jc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_lrmyp"]

[node name="Card" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(80, 120)
layout_mode = 3
anchors_preset = 0
offset_top = -55.0
offset_right = 80.0
offset_bottom = 65.0
focus_mode = 2
script = ExtResource("1_rcaje")

[node name="Highlight" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -9.0
offset_top = -11.0
offset_right = 91.0
offset_bottom = 129.0
mouse_filter = 1
color = Color(0, 0.977206, 0.465914, 1)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 120.0
mouse_filter = 1

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 60.0
offset_right = 80.0
offset_bottom = 85.0
mouse_filter = 1
theme = ExtResource("2_by2jc")
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 40)
layout_mode = 0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 120.0
mouse_filter = 1
theme = ExtResource("2_by2jc")
theme_override_font_sizes/font_size = 10
text = "Description"

[node name="Cost Corner" type="ColorRect" parent="."]
self_modulate = Color(0.278431, 0.694118, 0.933333, 1)
layout_mode = 1
offset_right = 20.0
offset_bottom = 20.0

[node name="Cost" type="Label" parent="Cost Corner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_by2jc")
text = "C"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_lrmyp")
expand_mode = 3
stretch_mode = 4

[node name="NotEnoughMana" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 80.0
offset_bottom = 120.0
mouse_filter = 1
color = Color(0, 0, 0, 0.588235)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
